# openapy

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-entrypoint.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/workflows/: dockerhub.yaml  publish.yml  unittest.yml
debug/: cleanup.sh  debug.sh
debug/apis/: pet_api.py
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/pages/: usage.md
docs/pages/examples/: fastapi.md  index.rst
docs/pages/template/: index.rst
docs/pages/tutorial/: index.rst  split_files.md  split_implementations.md
openapy/: __init__.py  args.py  config.py  diff.py  io.py  main.py  menu.py  parser.py  render.py  template.py  variables.py
openapy/commands/: example.py  generate.py  version.py
openapy/examples/: api.mustache  docker.sh  template.py.txt
tests/: api.return.mustache  apispec.yaml  conftest.py  prepare.sh  test_args.py  test_config.py  test_diff.py  test_generate.py  test_io.py  test_main.py  test_menu.py  test_openapy.py  test_parser.py  test_render.py  test_template.py
tests/commands/: test_example.py
tests/config/: example.yml  invalid_1.yml  invalid_2.yml  invalid_3.yml  per_file.yml  per_func.yml
tests/examples/: custom_template.txt  generate.sh  pull.sh
tests/examples/custom/apis/: pet_api.py  store_api.py  user_api.py
tests/examples/existing/apis_updated/: pet_api.py
tests/examples/expects/v5.2.1/: process_create_user.py  process_create_users_with_array_input.py  process_delete_user.py  process_get_inventory.py  process_update_user.py
tests/examples/expects/v5.3.1/: process_create_users_with_list_input.py  process_find_pets_by_tags.py  process_get_pet_by_id.py  process_get_user_by_name.py  process_logout_user.py  process_update_pet_with_form.py  process_upload_file.py
tests/examples/expects/v5.4.0/: process_add_pet.py  process_delete_order.py  process_delete_pet.py  process_find_pets_by_status.py  process_get_order_by_id.py  (+3 more)
tests/mustache/: api.mustache  return_param.mustache
tests/samples/: .openapi-generator-ignore  generate.sh  openapi.yaml
tests/server/: .openapi-generator-ignore
tests/server/.openapi-generator/: FILES
tests/template/: per_file.j2
tutorial/: version.sh
tutorial/00_split_files/: tutorial.sh
tutorial/00_split_files/apis/: source.py
tutorial/01_split_implementation/: cleanup.sh  tutorial.sh
tutorial/01_split_implementation/apis/: source.py
tutorial/openapi/: openapi-generator.sh  openapi.yaml
tutorial/split/: tutorial.sh
tutorial/split/apis/: source.py
(+17 files in other folders)
