[tool.poetry]
name = "openapy"
version = "0.3.1"
description = ""
authors = ["edge-minato <edge.minato@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/edge-minato/openapy"
keywords = ["developent"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9"
single-source = ">=0.2,<0.4"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pyproject-flake8 = "^0.0.1-alpha.2"
mypy = "^0.910"
isort = "^5.10.1"
tox = "^3.24.4"
flake8-bugbear = "^21.9.2"
pytest = "^7"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
tox-gh-actions = "^2.8.1"
pre-commit = "^2.15.0"
types-PyYAML = "^6.0.1"
Sphinx = "^4.4.0"
sphinx-markdown-tables = "^0.0.15"
sphinx-rtd-theme = "^1.0.0"
myst-parser = "^0.17.0"
pytest-sugar = "^0.9.4"
pytest-picked = "^0.4.6"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
openapy = "openapy.main:main"

[tool.black]
line-length = 119
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
    | dist
)
'''

[tool.flake8]
max-line-length = 119
max-complexity = 10
select = "C,E,F,W,B"
ignore = "E203"
exclude = "tests/server"

[tool.mypy]
# common
python_version = 3.9
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
# warning
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
# target
exclude = "^tests/server"

[tool.isort]
profile = "black"
line_length = 119

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =  py39, py310, flake8, black, mypy, isort
skipsdist = true
isolated_build = true
skip_missing_interpreters = true
[testenv]
whitelist_externals = poetry
require_locked_deps = true
install_dev_deps = true
commands =
    poetry install -vv --no-root
    pytest ./tests --cov=openapy --cov-branch --durations=0
[testenv:flake8]
commands = poetry run pflake8 --statistics ./openapy
[testenv:black]
commands = poetry run black ./openapy
[testenv:mypy]
commands = poetry run mypy ./openapy
[testenv:isort]
commands = poetry run isort ./openapy
"""
